cabal-version:       2.4
name:                CookieCalculator
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016 Eric Mertens
category:            Game
build-type:          Custom

custom-setup
  setup-depends: cabal-macosx, Cabal, base

library
  hs-source-dirs:      src
  include-dirs:        include
  install-includes:    cookies.h
  exposed-modules:     CookieClicker, SaveFormat, Building, GameInput, SourceData, AesonTH, Math
  other-modules:       CApi
  build-depends:
    base              ^>= 4.14,
    aeson             ^>= 1.5.3,
    base64-bytestring ^>= 1.2,
    bytestring        ^>= 0.10,
    containers        ^>= 0.6,
    lens              ^>= 4.19,
    template-haskell  ^>= 2.16,
    text              ^>= 1.2,
    th-lift-instances ^>= 0.1,
    time              ^>= 1.9,

  default-language:    Haskell2010

executable CookieClickerGtk
  hs-source-dirs:      gui
  main-is:             Main.hs
  other-modules:       AutoBuilder

  build-depends:
    CookieCalculator,
    base,
    lens,
    time,
    containers,
    text,
    haskell-gi-base,
    gi-gdk,
    gi-gtk ^>= 3.0.36,
    gi-gdkpixbuf ^>= 2.0.15,

  c-sources:           gui-cbits/resources.c
  default-language:    Haskell2010
